Home/Color Strips: Properly fix overflow

--- a/src/app/(home)/styles/ColorStrips.module.scss
+++ b/src/app/(home)/styles/ColorStrips.module.scss
@@ -3,10 +3,9 @@
 $skew-offset: 130px;
 
 .root {
-  position: relative;
-  right: $skew-offset;
+  margin-left: -$skew-offset;
 
-  flex: 1 1 auto;
+  flex: 1;
 
   display: flex;
   overflow: hidden;
